[fix] Scrollbar

--- a/src/layouts/App/global.css
+++ b/src/layouts/App/global.css
@@ -25,13 +25,7 @@ body {
   &:focus {
     outline: none;
   }
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none; 
 }
-body::-webkit-scrollbar {
-  display: none;
-}
-
 body::-webkit-scrollbar-track
 {
     border-radius: 10px;
